--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "chart.js": "^2.9.3",
     "firebase": "^7.14.3",
     "quasar": "^1.0.0",
-    "vue-chartjs": "^3.5.0"
+    "vue-chartjs": "^3.5.0",
+    "vue-google-charts": "^0.3.3",
+    "vue-pdf": "^4.1.0",
+    "vue-pdfjs": "^1.1.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0"
